--- a/news.html
+++ b/news.html
@@ -5,419 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TACSIM STUDIOS - News</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: #0a0a0a;
-            color: #ffffff;
-            overflow-x: hidden;
-            line-height: 1.6;
-        }
-
-        .bg-animation {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background: linear-gradient(45deg, #0a0a0a, #1a1a2e, #16213e, #0f0f23);
-            background-size: 400% 400%;
-            animation: gradientShift 8s ease infinite;
-        }
-
-        .bg-animation::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 20% 80%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 80% 20%, rgba(255, 119, 198, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 40% 40%, rgba(120, 219, 255, 0.2) 0%, transparent 50%);
-            animation: floatOrbs 12s ease-in-out infinite;
-        }
-
-        @keyframes gradientShift {
-
-            0%,
-            100% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-        }
-
-        @keyframes floatOrbs {
-
-            0%,
-            100% {
-                transform: translateY(0) scale(1);
-            }
-
-            50% {
-                transform: translateY(-20px) scale(1.1);
-            }
-        }
-
-        nav {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 50px;
-            padding: 15px 30px;
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-
-        nav:hover {
-            background: rgba(255, 255, 255, 0.15);
-            transform: translateX(-50%) translateY(-2px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
-        }
-
-        nav ul {
-            display: flex;
-            list-style: none;
-            align-items: center;
-            gap: 30px;
-        }
-
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 14px;
-            letter-spacing: 0.5px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        nav a:hover {
-            color: #00d4ff;
-            transform: translateY(-1px);
-        }
-
-        nav a.active {
-            color: #00d4ff;
-        }
-
-        nav a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            transition: width 0.3s ease;
-        }
-
-        nav a:hover::after,
-        nav a.active::after {
-            width: 100%;
-        }
-
-        .main-content {
-            padding: 120px 20px 50px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .page-title {
-            text-align: center;
-            font-size: 3rem;
-            margin-bottom: 20px;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            animation: fadeInUp 1s ease-out;
-        }
-
-        .page-subtitle {
-            text-align: center;
-            font-size: 1.2rem;
-            color: #cccccc;
-            margin-bottom: 60px;
-            animation: fadeInUp 1s ease-out 0.2s both;
-        }
-
-        .featured-news {
-            margin-bottom: 60px;
-        }
-
-        .featured-article {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 40px;
-            position: relative;
-            overflow: hidden;
-            transition: all 0.3s ease;
-            animation: cardSlideIn 0.8s ease forwards;
-        }
-
-        .featured-article:hover {
-            transform: translateY(-5px);
-            background: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
-        }
-
-        .featured-article::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 4px;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-        }
-
-        .featured-article:hover::before {
-            transform: translateX(0);
-        }
-
-        .featured-badge {
-            display: inline-block;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            color: #ffffff;
-            padding: 6px 16px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-            margin-bottom: 15px;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .featured-title {
-            font-size: 2rem;
-            margin-bottom: 15px;
-            color: #ffffff;
-            font-weight: 700;
-        }
-
-        .featured-meta {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            color: #999999;
-            font-size: 14px;
-        }
-
-        .featured-excerpt {
-            color: #cccccc;
-            font-size: 1.1rem;
-            line-height: 1.7;
-            margin-bottom: 25px;
-        }
-
-        .news-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-            gap: 30px;
-            margin-top: 30px;
-        }
-
-        .news-card {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 30px;
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
-            opacity: 0;
-            animation: cardSlideIn 0.6s ease forwards;
-        }
-
-        .news-card:nth-child(2) {
-            animation-delay: 0.1s;
-        }
-
-        .news-card:nth-child(3) {
-            animation-delay: 0.2s;
-        }
-
-        .news-card:nth-child(4) {
-            animation-delay: 0.3s;
-        }
-
-        .news-card:nth-child(5) {
-            animation-delay: 0.4s;
-        }
-
-        .news-card:nth-child(6) {
-            animation-delay: 0.5s;
-        }
-
-        .news-card:nth-child(7) {
-            animation-delay: 0.6s;
-        }
-
-        .news-card:nth-child(8) {
-            animation-delay: 0.7s;
-        }
-
-        .news-card:nth-child(9) {
-            animation-delay: 0.8s;
-        }
-
-        @keyframes cardSlideIn {
-            from {
-                opacity: 0;
-                transform: translateY(30px) scale(0.95);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0) scale(1);
-            }
-        }
-
-        .news-card:hover {
-            transform: translateY(-10px);
-            background: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
-        }
-
-        .news-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 3px;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-        }
-
-        .news-card:hover::before {
-            transform: translateX(0);
-        }
-
-        .news-category {
-            display: inline-block;
-            background: rgba(0, 212, 255, 0.2);
-            color: #00d4ff;
-            padding: 4px 12px;
-            border-radius: 15px;
-            font-size: 11px;
-            font-weight: 600;
-            margin-bottom: 15px;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .news-category.announcement {
-            background: rgba(255, 0, 212, 0.2);
-            color: #ff00d4;
-        }
-
-        .news-category.update {
-            background: rgba(255, 165, 0, 0.2);
-            color: #ffa500;
-        }
-
-        .news-category.release {
-            background: rgba(0, 255, 0, 0.2);
-            color: #00ff00;
-        }
-
-        .news-title {
-            font-size: 1.3rem;
-            margin-bottom: 10px;
-            color: #ffffff;
-            font-weight: 600;
-            line-height: 1.4;
-        }
-
-        .news-meta {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 15px;
-            color: #999999;
-            font-size: 13px;
-        }
-
-        .news-excerpt {
-            color: #cccccc;
-            margin-bottom: 20px;
-            line-height: 1.6;
-            font-size: 14px;
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        footer {
-            text-align: center;
-            padding: 40px 20px;
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(20px);
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            margin-top: 100px;
-        }
-
-        footer p {
-            color: #cccccc;
-            font-size: 14px;
-        }
-
-        @media (max-width: 768px) {
-            .page-title {
-                font-size: 2rem;
-            }
-
-            .featured-title {
-                font-size: 1.5rem;
-            }
-
-            .featured-article {
-                padding: 25px;
-            }
-
-            .news-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .featured-meta {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 10px;
-            }
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="data/pictures/favicon.png">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/news.css">
 </head>
 
 <body>
@@ -436,142 +26,8 @@
         <h1 class="page-title">LATEST NEWS</h1>
         <p class="page-subtitle">Stay updated with the latest developments from TACSIM STUDIOS</p>
 
-        <section class="featured-news">
-            <article class="featured-article">
-                <span class="featured-badge">BREAKING</span>
-                <h2 class="featured-title">Casual Callouts Pack V1.2.6 - Major Bug Fixes & Enhanced Realism</h2>
-                <div class="featured-meta">
-                    <span>📅 May 26, 2025</span>
-                    <span>👤 TACSIM Development Team</span>
-                    <span>🏷️ Update Release</span>
-                </div>
-                <p class="featured-excerpt">
-                    The latest update to our Casual Callouts Pack addresses major bugs and introduces enhanced realism features. After extensive community feedback, we've refined the experience to deliver more authentic police work scenarios in Sandy Shores.
-                </p>
-            </article>
-        </section>
-
-        <section class="news-grid">
-            <article class="news-card">
-                <span class="news-category update">UPDATE</span>
-                <h3 class="news-title">Casual Callouts V1.2.0 - Backend Rework & Bar Fight Callout</h3>
-                <div class="news-meta">
-                    <span>📅 May 23, 2025</span>
-                    <span>🏷️ Feature Update</span>
-                </div>
-                <p class="news-excerpt">
-                    Major backend improvements enhance stability and performance. The new Bar Fight callout adds dynamic confrontation scenarios with improved NPC behavior and realistic dialogue interactions.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category announcement">ANNOUNCEMENT</span>
-                <h3 class="news-title">Mexikan Removed from Director Position Due to Inactivity</h3>
-                <div class="news-meta">
-                    <span>📅 May 18, 2025</span>
-                    <span>🏷️ Team Update</span>
-                </div>
-                <p class="news-excerpt">
-                    Following a period of inactivity, Mexikan has been removed from the director position. We thank them for their contributions and continue to strengthen our team structure moving forward.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category release">NEW RELEASE</span>
-                <h3 class="news-title">TACSIM Casual Callouts Pack - Alpha Release</h3>
-                <div class="news-meta">
-                    <span>📅 May 14, 2025</span>
-                    <span>🏷️ Plugin Release</span>
-                </div>
-                <p class="news-excerpt">
-                    Experience immersive, realism-based police work with 25 unique callouts centered around Sandy Shores. Features believable NPC behavior, natural dialogue, and dynamic scene variety for authentic LSPDFR gameplay.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category update">UPDATE</span>
-                <h3 class="news-title">Active Shooter Pack V2.5.0 - University Location Added</h3>
-                <div class="news-meta">
-                    <span>📅 May 7, 2025</span>
-                    <span>🏷️ Content Update</span>
-                </div>
-                <p class="news-excerpt">
-                    Major update introduces the University Active Shooter scenario with optimized AI behavior, enhanced stability, improved entity cleanup, and smoother gameplay transitions for high-intensity situations.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category announcement">TEAM UPDATE</span>
-                <h3 class="news-title">Mexikan Joins as Director - Server Management Enhancement</h3>
-                <div class="news-meta">
-                    <span>📅 May 4, 2025</span>
-                    <span>🏷️ Team Addition</span>
-                </div>
-                <p class="news-excerpt">
-                    We welcome Mexikan to the TACSIM team as our new director, focusing on server management and operational efficiency. This addition strengthens our development capabilities and community support.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category update">UPDATE</span>
-                <h3 class="news-title">Active Shooter Pack V2.0.0 - Stability & Performance Overhaul</h3>
-                <div class="news-meta">
-                    <span>📅 April 28, 2025</span>
-                    <span>🏷️ Major Update</span>
-                </div>
-                <p class="news-excerpt">
-                    Comprehensive stability improvements including optimized AI behavior, enhanced entity cleanup, reduced crashes, and smoother callout sequences. The University location provides new tactical challenges.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category release">NEW RELEASE</span>
-                <h3 class="news-title">Active Shooter Callout Pack - High-Risk Critical Incidents</h3>
-                <div class="news-meta">
-                    <span>📅 April 27, 2025</span>
-                    <span>🏷️ Plugin Release</span>
-                </div>
-                <p class="news-excerpt">
-                    Experience intense, realistic active shooter scenarios with focus on area security, threat neutralization, and civilian management. Multiple environments challenge tactical decision-making and response protocols.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category update">UPDATE</span>
-                <h3 class="news-title">Real Reactions V2.0.0 - Complete Seizure Logic Rewrite</h3>
-                <div class="news-meta">
-                    <span>📅 April 19, 2025</span>
-                    <span>🏷️ Major Update</span>
-                </div>
-                <p class="news-excerpt">
-                    Revolutionary update featuring rewritten seizure mechanics, guaranteed weapon drops, 80+ configured weapons with unique knockback forces, and comprehensive INI configuration options for ultimate customization.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category release">NEW RELEASE</span>
-                <h3 class="news-title">Real Reactions V1.0 - Combat Realism Enhancement</h3>
-                <div class="news-meta">
-                    <span>📅 April 16, 2025</span>
-                    <span>🏷️ Plugin Release</span>
-                </div>
-                <p class="news-excerpt">
-                    Launch of our long-term realism project enhancing combat feel in GTA V. Features subtle NPC reactions including stumbling, weapon dropping, and location-based injury responses for immersive gameplay.
-                </p>
-            </article>
-
-            <article class="news-card">
-                <span class="news-category announcement">LEADERSHIP CHANGE</span>
-                <h3 class="news-title">Major Ownership Transition - Solcite Transfers Role to Dr.Mamba</h3>
-                <div class="news-meta">
-                    <span>📅 Date Not Specified</span>
-                    <span>🏷️ Major Announcement</span>
-                </div>
-                <p class="news-excerpt">
-                    Significant leadership change as Solcite steps down from developer and owner roles, transferring responsibilities to Dr.Mamba. This transition marks a new chapter in TACSIM STUDIOS development.
-                </p>
-            </article>
-        </section>
+        <section class="featured-news" id="featured-news"></section>
+        <section class="news-grid" id="news-list"></section>
     </main>
 
     <footer>
@@ -614,6 +70,7 @@
             });
         });
     </script>
+    <script src="scripts/news.js"></script>
 </body>
 
 </html>
