--- a/plugins.html
+++ b/plugins.html
@@ -2,404 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TACSIM STUDIOS - Plugins</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: #0a0a0a;
-            color: #ffffff;
-            overflow-x: hidden;
-            line-height: 1.6;
-        }
-
-        .bg-animation {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background: linear-gradient(45deg, #0a0a0a, #1a1a2e, #16213e, #0f0f23);
-            background-size: 400% 400%;
-            animation: gradientShift 8s ease infinite;
-        }
-
-        .bg-animation::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 20% 80%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 80% 20%, rgba(255, 119, 198, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 40% 40%, rgba(120, 219, 255, 0.2) 0%, transparent 50%);
-            animation: floatOrbs 12s ease-in-out infinite;
-        }
-
-        @keyframes gradientShift {
-
-            0%,
-            100% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-        }
-
-        @keyframes floatOrbs {
-
-            0%,
-            100% {
-                transform: translateY(0) scale(1);
-            }
-
-            50% {
-                transform: translateY(-20px) scale(1.1);
-            }
-        }
-
-        nav {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 50px;
-            padding: 15px 30px;
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-
-        nav:hover {
-            background: rgba(255, 255, 255, 0.15);
-            transform: translateX(-50%) translateY(-2px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
-        }
-
-        nav ul {
-            display: flex;
-            list-style: none;
-            align-items: center;
-            gap: 30px;
-        }
-
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 14px;
-            letter-spacing: 0.5px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        nav a:hover {
-            color: #00d4ff;
-            transform: translateY(-1px);
-        }
-
-        nav a.active {
-            color: #00d4ff;
-        }
-
-        nav a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            transition: width 0.3s ease;
-        }
-
-        nav a:hover::after,
-        nav a.active::after {
-            width: 100%;
-        }
-
-        .main-content {
-            padding: 120px 20px 50px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .page-title {
-            text-align: center;
-            font-size: 3rem;
-            margin-bottom: 20px;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            animation: fadeInUp 1s ease-out;
-        }
-
-        .page-subtitle {
-            text-align: center;
-            font-size: 1.2rem;
-            color: #cccccc;
-            margin-bottom: 60px;
-            animation: fadeInUp 1s ease-out 0.2s both;
-        }
-
-        .filter-tabs {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 50px;
-            flex-wrap: wrap;
-        }
-
-        .filter-tab {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            color: #ffffff;
-            padding: 12px 24px;
-            border-radius: 25px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-size: 14px;
-            font-weight: 500;
-        }
-
-        .filter-tab:hover,
-        .filter-tab.active {
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(0, 212, 255, 0.3);
-        }
-
-        .plugins-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-            gap: 30px;
-            margin-top: 30px;
-        }
-
-        .plugin-card {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 30px;
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
-            opacity: 0;
-            animation: cardSlideIn 0.6s ease forwards;
-        }
-
-        .plugin-card:nth-child(2) {
-            animation-delay: 0.1s;
-        }
-
-        .plugin-card:nth-child(3) {
-            animation-delay: 0.2s;
-        }
-
-        .plugin-card:nth-child(4) {
-            animation-delay: 0.3s;
-        }
-
-        .plugin-card:nth-child(5) {
-            animation-delay: 0.4s;
-        }
-
-        .plugin-card:nth-child(6) {
-            animation-delay: 0.5s;
-        }
-
-        @keyframes cardSlideIn {
-            from {
-                opacity: 0;
-                transform: translateY(30px) scale(0.95);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0) scale(1);
-            }
-        }
-
-        .plugin-card:hover {
-            transform: translateY(-10px) scale(1.02);
-            background: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
-        }
-
-        .plugin-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 3px;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-        }
-
-        .plugin-card:hover::before {
-            transform: translateX(0);
-        }
-
-        .plugin-header {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 15px;
-        }
-
-        .plugin-icon {
-            font-size: 2.5rem;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        .plugin-title {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #ffffff;
-        }
-
-        .plugin-version {
-            background: rgba(0, 212, 255, 0.2);
-            color: #00d4ff;
-            padding: 4px 12px;
-            border-radius: 15px;
-            font-size: 12px;
-            font-weight: 600;
-            margin-left: auto;
-        }
-
-        .plugin-description {
-            color: #cccccc;
-            margin-bottom: 20px;
-            line-height: 1.6;
-        }
-
-        .plugin-tags {
-            display: flex;
-            gap: 8px;
-            margin-bottom: 20px;
-            flex-wrap: wrap;
-        }
-
-        .plugin-tag {
-            background: rgba(255, 255, 255, 0.1);
-            color: #ffffff;
-            padding: 4px 10px;
-            border-radius: 12px;
-            font-size: 11px;
-            font-weight: 500;
-        }
-
-        .plugin-stats {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            font-size: 14px;
-            color: #999999;
-        }
-
-        .plugin-actions {
-            display: flex;
-            gap: 10px;
-        }
-
-        .plugin-button {
-            flex: 1;
-            background: linear-gradient(45deg, #00d4ff, #ff00d4);
-            color: #ffffff;
-            border: none;
-            padding: 12px 20px;
-            border-radius: 25px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            text-align: center;
-            font-size: 14px;
-            display: inline-block;
-        }
-
-        .plugin-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 25px rgba(0, 212, 255, 0.4);
-        }
-
-        .plugin-button.secondary {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-        }
-
-        .plugin-button.secondary:hover {
-            background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 10px 25px rgba(255, 255, 255, 0.1);
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        footer {
-            text-align: center;
-            padding: 40px 20px;
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(20px);
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            margin-top: 100px;
-        }
-
-        footer p {
-            color: #cccccc;
-            font-size: 14px;
-        }
-
-        @media (max-width: 768px) {
-            .plugins-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .page-title {
-                font-size: 2rem;
-            }
-
-            .filter-tabs {
-                gap: 5px;
-            }
-
-            .filter-tab {
-                padding: 10px 16px;
-                font-size: 12px;
-            }
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="data/pictures/favicon.png">
+   <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/plugins.css">
 </head>
 
 <body>
@@ -424,87 +32,8 @@
             <div class="filter-tab" data-filter="Script">SCRIPTS</div>
         </div>
 
-        <div class="plugins-grid">
-            <!-- Plugin 1: TACSIMS Casual Callouts -->
-            <div class="plugin-card" data-category="Callout">
-                <div class="plugin-header">
-                    <div class="plugin-icon">🚔</div>
-                    <div>
-                        <div class="plugin-title">TACSIMS Casual Callouts</div>
-                    </div>
-                    <div class="plugin-version">v1.2.5</div>
-                </div>
-                <p class="plugin-description">
-                    Welcome to the TACSIMS Callout Pack – an immersive, realism-based set of 25 callouts designed to
-                    bring grounded police work to LSPDFR. This is the alpha version, and all current callouts are
-                    centered around the Sandy Shores region. Our focus is believable NPC behavior, natural dialogue, and
-                    dynamic scene variety.
-                </p>
-                <div class="plugin-tags">
-                    <span class="plugin-tag">Callout</span>
-                    <span class="plugin-tag">Sandy Shores</span>
-                    <span class="plugin-tag">Realism</span>
-                </div>
-                <div class="plugin-actions">
-                    <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/51062-tacsims-casual-callouts/?tab=comments"
-                        class="plugin-button secondary" target="_blank">LCPDFR.com</a>
-                    <a href="https://cdn.discordapp.com/attachments/1365438572752015412/1379182683233452072/TACSIMS_Callouts_1.2.5.zip?ex=683ff837&is=683ea6b7&hm=c797a612c2d90e51d825d477992f78b14135893c3ecaf63103af4484a432ad0a&"
-                        class="plugin-button">Download</a>
-                </div>
-            </div>
-
-            <!-- Plugin 2: Example Script Plugin -->
-            <div class="plugin-card" data-category="Callout">
-                <div class="plugin-header">
-                    <div class="plugin-icon">🔫</div>
-                    <div>
-                        <div class="plugin-title">Active Shooter Callout Pack</div>
-                    </div>
-                    <div class="plugin-version">v2.5.0</div>
-                </div>
-                <p class="plugin-description">
-                    The Active Shooter Callout Pack brings high-risk critical incidents to LSPDFR, focusing on realism,
-                    urgency, and immersive scene handling.
-                    Developed by TACSIMS, this pack challenges players to secure areas, neutralize threats, and manage
-                    civilians across multiple environments.
-                </p>
-                <div class="plugin-tags">
-                    <span class="plugin-tag">Callout</span>
-                    <span class="plugin-tag">Fun</span>
-
-                </div>
-                <div class="plugin-actions">
-                    <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/50931-active-shooter-callout-pack/"
-                        class="plugin-button secondary" target="_blank">LCPDFR.com</a>
-                    <a href="https://cdn.discordapp.com/attachments/1365438572752015412/1373737398772568194/TACSIMS_AS.zip?ex=683fef66&is=683e9de6&hm=4c15a0cc17ef69c04dbcf1b31e665cd4b13f9a36786329506fc68774d59de436&"
-                        class="plugin-button">Download</a>
-                </div>
-            </div>  
-
-            <!-- Plugin 3: Another Callout Example -->
-            <div class="plugin-card" data-category="Script">
-                <div class="plugin-header">
-                    <div class="plugin-icon">💥</div>
-                    <div>
-                        <div class="plugin-title">Realistic Reactions</div>
-                    </div>
-                    <div class="plugin-version">2.0.0</div>
-                </div>
-                <p class="plugin-description">
-                    Real Reactions introduces subtle but immersive NPC behavior: peds stumble, drop weapons, and react
-                    to injuries based on where they're hit. Whether it's an arm shot or a taser hit, expect responses
-                    that bring the world to life without being over-the-top.
-                </p>
-                <div class="plugin-tags">
-                    <span class="plugin-tag">Script</span>
-                    <span class="plugin-tag">Realism</span>
-                </div>
-                <div class="plugin-actions">
-                    <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/50806-realistic-reactions/" class="plugin-button secondary"
-                        target="_blank">LCPDFR.com</a>
-                    <a href="https://cdn.discordapp.com/attachments/1365663562453749761/1379533180385628364/RealReactionsV2.0.0.zip?ex=684095e4&is=683f4464&hm=a4467be077ba6e63da6d55d817adc5effa4c554e5712f33b4f71db22a4736f4d&" class="plugin-button">Download</a>
-                </div>
-            </div>
+        <div id="plugins-list" class="plugins-grid">
+            <!-- Plugin cards will be dynamically inserted here -->
         </div>
     </main>
 
@@ -516,38 +45,7 @@
         </p>
     </footer>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-
-            const filterTabs = document.querySelectorAll('.filter-tab');
-            const pluginCards = document.querySelectorAll('.plugin-card');
-
-            filterTabs.forEach(tab => {
-                tab.addEventListener('click', function () {
-
-                    filterTabs.forEach(t => t.classList.remove('active'));
-
-                    this.classList.add('active');
-
-                    const filter = this.getAttribute('data-filter');
-
-                    pluginCards.forEach(card => {
-
-                        if (filter === 'all') {
-                            card.style.display = '';
-                        } else {
-
-                            if (card.getAttribute('data-category') === filter) {
-                                card.style.display = '';
-                            } else {
-                                card.style.display = 'none';
-                            }
-                        }
-                    });
-                });
-            });
-        });
-    </script>
+    <script src="scripts/plugins.js "></script>
 </body>
 
 </html>
