--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/x-icon" href="data/pictures/favicon.png">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/index.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 </head>
 
 <body>
